# TBMbot

./: .gitignore  pyproject.toml
data/alerts/by-transport/: line TBC 10.json  line TBT 59.json
data/get-schedule/: A.json
data/network/line-informations/: line TBC 10.json  line TBT 59.json  line TBT 60.json  line TBT 61.json  line TBT 62.json
data/network/stoparea-informations/: GAR.json
tbmbot/: __init__.py  __main__.py  tbm_bot.py
tbmbot/cogs/: __init__.py  information.py  schedule.py  search.py
tbmbot/models/: __init__.py  alert.py  line_informations.py  search.py  stop_schedule.py  stoparea_information.py
tbmbot/utils/: cleaner.py  embeds.py  requester.py  tram_converter.py
tbmbot/views/: __init__.py  refresh_view.py  search_view.py
